force-app/main/default/objects/Student_Request__c/Student_Request__c.object-meta.xml
<CustomObject>
    <label>Student Request</label>
    <nameField>
        <label>Student Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>