force-app/main/default/objects/Student_Request__c/fields/Student_Master__c.field-meta.xml
<CustomField>
    <fullName>Student_Master__c</fullName>
    <label>Student Master</label>
    <referenceTo>Student_Master__c</referenceTo>
    <relationshipLabel>Student Requests</relationshipLabel>
    <relationshipName>Student_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>