force-app/main/default/objects/Student_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount Request</fullName>
                <default>true</default>
                <label>Discount Request</label>
            </value>
            <value>
                <fullName>Employment Request</fullName>
            </value>
            <value>
                <fullName>Final Clearance</fullName>
            </value>
            <value>
                <fullName>Leave Request</fullName>
            </value>
            <value>
                <fullName>Loan Request</fullName>
            </value>
            <value>
                <fullName>Seperation Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>