force-app/main/default/objects/Student_Request__c/validationRules/Request_Number_should_be_lessthan_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Number_should_be_lessthan_10</fullName>
    <active>true</active>
    <errorConditionFormula>Number__c &gt;=  10</errorConditionFormula>
    <errorMessage>Request Numbers should always be less than 10.</errorMessage>
</ValidationRule>